v3/crates/engine/tests/snapshots/execution__common__ir_execute__commands__functions__command_argument_presets_admin.snap
---
source: crates/engine/tests/common.rs
expression: ir
---
V1(
    QueryRequestV1 {
        queries: {
            Alias(
                Identifier(
                    "getActorsByMovieIdBounds",
                ),
            ): Command(
                CommandSelection {
                    target: CommandTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        command_name: CommandName(
                            Identifier(
                                "get_actors_by_movie_id_bounds",
                            ),
                        ),
                        arguments: {
                            ArgumentName(
                                Identifier(
                                    "upper_bound",
                                ),
                            ): Literal(
                                Number(4),
                            ),
                        },
                    },
                    selection: Some(
                        {
                            Alias(
                                Identifier(
                                    "actor_id",
                                ),
                            ): Field(
                                ObjectFieldSelection {
                                    target: ObjectFieldTarget {
                                        field_name: FieldName(
                                            Identifier(
                                                "actor_id",
                                            ),
                                        ),
                                        arguments: {},
                                    },
                                    selection: None,
                                },
                            ),
                            Alias(
                                Identifier(
                                    "movie_id",
                                ),
                            ): Field(
                                ObjectFieldSelection {
                                    target: ObjectFieldTarget {
                                        field_name: FieldName(
                                            Identifier(
                                                "movie_id",
                                            ),
                                        ),
                                        arguments: {},
                                    },
                                    selection: None,
                                },
                            ),
                            Alias(
                                Identifier(
                                    "name",
                                ),
                            ): Field(
                                ObjectFieldSelection {
                                    target: ObjectFieldTarget {
                                        field_name: FieldName(
                                            Identifier(
                                                "name",
                                            ),
                                        ),
                                        arguments: {},
                                    },
                                    selection: None,
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    },
)
